# core-services

./: Cargo.toml  README.md
crates/op-steel/: Cargo.toml
crates/op-steel/src/: game.rs  l1.rs
crates/op-steel/src/optimism/: host.rs  mod.rs
crates/steel/: Cargo.toml
crates/steel/src/: account.rs  block.rs  config.rs  contract.rs  ethereum.rs  event.rs  lib.rs  mpt.rs  precompiles.rs  serde.rs  state.rs  verifier.rs
crates/steel/src/beacon/: mod.rs
crates/steel/src/beacon/host/: client.rs  consensus.rs  mod.rs
crates/steel/src/history/: beacon_roots.rs  mod.rs  state.rs
crates/steel/src/history/eip2935/: history_storage.rs  mod.rs
crates/steel/src/host/: builder.rs  mod.rs
crates/steel/src/host/db/: proof.rs  provider.rs
crates/steel/testdata/: eip2935_history_input.json  history_input.json
crates/steel/tests/: corruption.rs  erc20.rs  steel.rs
crates/steel/tests/common/: mod.rs
src/: Cargo.toml  README.md
src/host/: Cargo.toml
src/host/src/: main.rs
src/methods/: Cargo.toml
src/methods/guest/: Cargo.toml
src/methods/guest/src/: main.rs
