[package]
name = "risc0-op-steel"
description = "Optimism abstraction for Steel."
version = "0.8.0"
rust-version = "1.88"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy = { workspace = true, optional = true, features = ["std", "essentials"] }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-evm = { workspace = true }
alloy-op-evm = { workspace = true }
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
delegate = { workspace = true }
log = { workspace = true }
op-alloy-network = { workspace = true }
op-alloy-rpc-types = { workspace = true }
op-revm = { workspace = true, features = ["serde"] }
risc0-steel = { workspace = true }
serde = { workspace = true }
test-log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[features]
default = []
host = ["dep:alloy", "dep:tokio", "dep:url", "risc0-steel/host", "alloy-primitives/rand"]
reqwest-native-tls = ["alloy?/reqwest-native-tls", "risc0-steel/reqwest-native-tls"]
reqwest-rustls-tls = ["alloy?/reqwest-rustls-tls", "risc0-steel/reqwest-rustls-tls"]
